[dependencies.once_cell]
version = "1.20.2"

[package]
authors = ["AmakeSasha <amakesasha@gmail.com>"]
categories = ["web-programming::http-server", "web-programming"]
description = "A simple and lightweight crate for launching and using a server."
edition = "2021"
keywords = ["tcp_server", "web", "tcp", "server"]
license = "MIT"
name = "rust_tcp_sever"
readme = "README.md"
repository = "https://gitverse.ru/Amakesasha/Rust-TcpSever"
version = "0.2.2-gitverse"

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
