[dependencies.bytes]
version = "1.9.0"
[dependencies.tokio]
version = "1"
features = ["full"]
[dependencies.once_cell]
version = "1.20.2"
[dependencies.thiserror]
version = "2.0.9"

[package]
authors = ["AmakeSasha <amakesasha@gmail.com>"]
categories = ["web-programming::http-server", "web-programming"]
description = "A simple and lightweight asynchronous TCP server crate."
edition = "2018"
keywords = ["tcp_server", "async", "web", "tcp", "server"]
license = "MIT"
name = "rust_tcp_sever"
readme = "README.md"
repository = "https://github.ru/Amakesasha/Rust-TcpSever"
version = "0.3.0"

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false

[features]
default = []
get_stream = []
check_stream = []
